Update Java_version.java